[gd_scene load_steps=13 format=3 uid="uid://cpkr32elxa7a8"]

[ext_resource type="Script" path="res://ver_1/character/enemy/OneShot/one_shot.gd" id="1_pb20v"]
[ext_resource type="Texture2D" uid="uid://bqp1o7iap6knb" path="res://assets/enemies/OneShot.png" id="2_n21es"]
[ext_resource type="PackedScene" uid="uid://c48dnnj6ck6nx" path="res://ver_1/status_effects/status_holder.tscn" id="3_b5mel"]

[sub_resource type="AtlasTexture" id="AtlasTexture_64ogx"]
atlas = ExtResource("2_n21es")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h2g4q"]
atlas = ExtResource("2_n21es")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u2yds"]
atlas = ExtResource("2_n21es")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_visk7"]
atlas = ExtResource("2_n21es")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_vvea3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_64ogx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h2g4q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u2yds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_visk7")
}],
"loop": true,
"name": &"default",
"speed": 7.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_8h38y"]
radius = 15.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1m36h"]
radius = 45.0
height = 130.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_papkv"]
radius = 15.0
height = 50.0

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_t27sw"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1

[node name="OneShot" type="CharacterBody2D"]
scale = Vector2(0.2, 0.2)
collision_layer = 4
collision_mask = 4
script = ExtResource("1_pb20v")
max_health = 1.0
speed = 40
dmg = 10.0
xp_drop_spread = 5
char_name = "Pest"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_vvea3")
frame_progress = 0.848141
offset = Vector2(0, 3)

[node name="CollisionBox" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CircleShape2D_8h38y")

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_1m36h")
debug_color = Color(0.930156, 0.224969, 0.360381, 0.42)

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
rotation = 1.5708
scale = Vector2(2, 2)
shape = SubResource("CapsuleShape2D_papkv")
debug_color = Color(0, 0.592183, 0.742917, 0.42)

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_t27sw")

[node name="StatusHolder" parent="." instance=ExtResource("3_b5mel")]
